Squash bug

--- a/src/styles/example.css
+++ b/src/styles/example.css
@@ -56,6 +56,8 @@
 #tb{
     position: fixed;
     z-index: -1;
+    height: 110%;
+    width: 100%;
 }
 
 #ib{
